# src/validation/week.js
@@ -2,7 +2,7 @@ import Joi from 'joi';
 import { weekPregnancyValidation } from '../validation/helpers.js';
 
 export const weekParamSchema = Joi.object({
-  weekNumber: weekPregnancyValidation().required().messages({
+  week: weekPregnancyValidation().required().messages({
     'number.base': 'Week must be a number',
     'number.integer': 'Week must be an integer',
     'number.min': 'Week must be at least 1',
